--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\PC\AppData\Local\Temp\testng-eclipse--1287836519\testng-customsuite.xml</span>
+                    <span>C:\Users\PC\AppData\Local\Temp\testng-eclipse--577465472\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,12 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="vtiger.ContactsTest.CreateContactsTest" class="method navigator-link" hash-for-method="createContactsTest">createContactsTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="vtiger.OrganaizationTest.CreateOrganaizationTest" class="method navigator-link" hash-for-method="CreateOrganaizationTest">CreateOrganaizationTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="vtiger.ContactsTest.CreateContactsTest" class="method navigator-link" hash-for-method="demo">demo</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="vtiger.OrganaizationTest.CreateOrganaizationTest" class="method navigator-link" hash-for-method="demo">demo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,14 +127,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">vtiger.ContactsTest.CreateContactsTest</span>
+              <span class="class-name">vtiger.OrganaizationTest.CreateOrganaizationTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createContactsTest">
-                  </a> <!-- createContactsTest -->
-                  <span class="method-name">createContactsTest</span>
+                  <a name="CreateOrganaizationTest">
+                  </a> <!-- CreateOrganaizationTest -->
+                  <span class="method-name">CreateOrganaizationTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -149,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PC\AppData\Local\Temp\testng-eclipse--1287836519\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PC\AppData\Local\Temp\testng-eclipse--577465472\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -158,7 +158,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;vtiger.ContactsTest.CreateContactsTest&quot;/&gt;
+      &lt;class name=&quot;vtiger.OrganaizationTest.CreateOrganaizationTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -183,10 +183,10 @@
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
-              <span class="test-group-name">SmokeSuite</span>
+              <span class="test-group-name">RegressionSuite</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">createContactsTest</span>
+                <span class="method-in-group-name">CreateOrganaizationTest</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -208,18 +208,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createContactsTest')
-data.setCell(0, 2, 'vtiger.ContactsTest.CreateContactsTest')
-data.setCell(0, 3, 30227);
+data.setCell(0, 1, 'CreateOrganaizationTest')
+data.setCell(0, 2, 'vtiger.OrganaizationTest.CreateOrganaizationTest')
+data.setCell(0, 3, 39136);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'demo')
-data.setCell(1, 2, 'vtiger.ContactsTest.CreateContactsTest')
-data.setCell(1, 3, 5);
+data.setCell(1, 2, 'vtiger.OrganaizationTest.CreateOrganaizationTest')
+data.setCell(1, 3, 6);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 30 seconds</span>
+              <span class="suite-total-time">Total running time: 39 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -231,18 +231,12 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">createContactsTest</span>
+              <span class="reporter-method-name">CreateOrganaizationTest</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">navaigated to contacts link</span>
-                <span class="reporter-method-output">navaigated to contacts look up image</span>
-                <span class="reporter-method-output">created contacts </span>
-                <span class="reporter-method-output">validated contacts </span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">demo</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">demo script</span>
+                <span class="reporter-method-output">navigated organaization link</span>
+                <span class="reporter-method-output">navigated organaization look up image</span>
+                <span class="reporter-method-output">created  organaization </span>
+                <span class="reporter-method-output">validated organaization </span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -260,46 +254,46 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">vtiger.ContactsTest.CreateContactsTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">vtiger.OrganaizationTest.CreateOrganaizationTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">bsConfig</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">bcConfig</span>
-                <span class="method-start">1195 ms</span>
+                <span class="method-start">1379 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">bmConfig</span>
-                <span class="method-start">15372 ms</span>
+                <span class="method-start">36885 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">createContactsTest</span>
-                <span class="method-start">21230 ms</span>
+                <span class="method-name">CreateOrganaizationTest</span>
+                <span class="method-start">43832 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">amConfig</span>
-                <span class="method-start">51496 ms</span>
+                <span class="method-start">82987 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">bmConfig</span>
-                <span class="method-start">53981 ms</span>
+                <span class="method-start">86122 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">demo</span>
-                <span class="method-start">58675 ms</span>
+                <span class="method-start">89978 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">amConfig</span>
-                <span class="method-start">58685 ms</span>
+                <span class="method-start">89987 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">acConfig</span>
-                <span class="method-start">64241 ms</span>
+                <span class="method-start">95490 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">asConfig</span>
-                <span class="method-start">67436 ms</span>
+                <span class="method-start">99938 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
