--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,20 +4,20 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>vtiger.ContactsTest.CreateContactsTest</td>
+<td>vtiger.OrganaizationTest.CreateOrganaizationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createContactsTest</td>
-<td>SmokeSuite </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>demo</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>CreateOrganaizationTest</td>
+<td>RegressionSuite </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
