--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b3f4a4">  <td>23/04/10 10:46:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.ContactsTest.CreateContactsTest@d9345cd]">&lt;&lt;acConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="b3f4a4">  <td>23/04/10 10:46:34</td>   <td>-5557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.ContactsTest.CreateContactsTest@d9345cd]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="b3f4a4">  <td>23/04/10 10:46:34</td>   <td>-5557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.ContactsTest.CreateContactsTest@d9345cd]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="b3f4a4">  <td>23/04/10 10:46:43</td>   <td>3197</td> <td title="&lt;&lt;BaseClass.asConfig()[pri:0, instance:vtiger.ContactsTest.CreateContactsTest@d9345cd]">&lt;&lt;asConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="b3f4a4">  <td>23/04/10 10:45:37</td>   <td>-63046</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig()[pri:0, instance:vtiger.ContactsTest.CreateContactsTest@d9345cd]">&gt;&gt;bcConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="b3f4a4">  <td>23/04/10 10:46:30</td>   <td>-10260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.ContactsTest.CreateContactsTest@d9345cd]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="b3f4a4">  <td>23/04/10 10:46:30</td>   <td>-10260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.ContactsTest.CreateContactsTest@d9345cd]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="b3f4a4">  <td>23/04/10 10:45:36</td>   <td>-64226</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:vtiger.ContactsTest.CreateContactsTest@d9345cd]">&gt;&gt;bsConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="96ebbf">  <td>23/04/10 10:45:57</td>   <td>-43012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactsTest.createContactsTest()[pri:0, instance:vtiger.ContactsTest.CreateContactsTest@d9345cd]">createContactsTest</td> 
+<tr bgcolor="96ebbf">  <td>23/04/18 19:40:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganaizationTest.CreateOrganaizationTest()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">CreateOrganaizationTest</td> 
   <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="96ebbf">  <td>23/04/10 10:46:34</td>   <td>-5568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactsTest.demo()[pri:0, instance:vtiger.ContactsTest.CreateContactsTest@d9345cd]">demo</td> 
+<tr bgcolor="b3f4a4">  <td>23/04/18 19:41:35</td>   <td>51658</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&lt;&lt;acConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
+<tr bgcolor="b3f4a4">  <td>23/04/18 19:41:29</td>   <td>46156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&lt;&lt;amConfig</td> 
+<td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
+<tr bgcolor="b3f4a4">  <td>23/04/18 19:41:29</td>   <td>46156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&lt;&lt;amConfig</td> 
+<td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
+<tr bgcolor="b3f4a4">  <td>23/04/18 19:41:39</td>   <td>56106</td> <td title="&lt;&lt;BaseClass.asConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&lt;&lt;asConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
+<tr bgcolor="b3f4a4">  <td>23/04/18 19:40:01</td>   <td>-42452</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&gt;&gt;bcConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
+<tr bgcolor="b3f4a4">  <td>23/04/18 19:41:25</td>   <td>42292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&gt;&gt;bmConfig</td> 
+<td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
+<tr bgcolor="b3f4a4">  <td>23/04/18 19:41:25</td>   <td>42292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&gt;&gt;bmConfig</td> 
+<td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
+<tr bgcolor="b3f4a4">  <td>23/04/18 19:39:59</td>   <td>-43818</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&gt;&gt;bsConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
+<tr bgcolor="96ebbf">  <td>23/04/18 19:41:29</td>   <td>46146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganaizationTest.demo()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">demo</td> 
   <td>main@1902237905</td>   <td></td> </tr>
 </table>
