--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,6 +1,5 @@
-<h2>Reporter output</h2><table><tr><td>navaigated to contacts link</td></tr>
-<tr><td>navaigated to contacts look up image</td></tr>
-<tr><td>created contacts </td></tr>
-<tr><td>validated contacts </td></tr>
-<tr><td>demo script</td></tr>
+<h2>Reporter output</h2><table><tr><td>navigated organaization link</td></tr>
+<tr><td>navigated organaization look up image</td></tr>
+<tr><td>created  organaization </td></tr>
+<tr><td>validated organaization </td></tr>
 </table>
