--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,4 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>RegressionSuite</td><td>CreateOrganaizationTest1.CreateOrganaizationTest()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest1@2e6a8155]<br/></td></tr>
-<tr><td>SmokeSuite</td><td>CreateContactsTest1.createContactsTest()[pri:0, instance:vtiger.ContactsTest.CreateContactsTest1@130c12b7]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>SmokeSuite</td><td>CreateContactsTest.createContactsTest()[pri:0, instance:vtiger.ContactsTest.CreateContactsTest@783a467b]<br/></td></tr>
 </table>
