--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,8 +1,3 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>vtiger.GenericUtilityes.BaseClass.bsConfig</td></tr>
-<tr><td>vtiger.GenericUtilityes.BaseClass.bsConfig</td></tr>
-<tr><td>vtiger.GenericUtilityes.BaseClass.bsConfig</td></tr>
-<tr><td>vtiger.GenericUtilityes.BaseClass.asConfig</td></tr>
-<tr><td>vtiger.GenericUtilityes.BaseClass.asConfig</td></tr>
-<tr><td>vtiger.GenericUtilityes.BaseClass.asConfig</td></tr>
+<tr><td>vtiger.ContactsTest.CreateContactsTest.demo</td></tr>
 </table>
