--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,20 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>vtiger.OrganaizationTest.CreateOrganaizationTest</td>
+<td>vtiger.CreateContactsWithOrganaizationTest.CreateContactWithOrganaization</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>demo</td>
+<td>CreateContactWithOrganaization</td>
 <td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>CreateOrganaizationTest</td>
-<td>RegressionSuite </td>
-</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
