--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,24 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b3f4a4">  <td>23/04/18 19:41:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="96ebbf">  <td>23/04/18 19:40:43</td>   <td>-46156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganaizationTest.CreateOrganaizationTest()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">CreateOrganaizationTest</td> 
-  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="96ebbf">  <td>23/04/18 19:41:29</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateOrganaizationTest.demo()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">demo</td> 
-  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="b3f4a4">  <td>23/04/18 19:41:25</td>   <td>-3864</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="b3f4a4">  <td>23/04/18 19:41:25</td>   <td>-3864</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="b3f4a4">  <td>23/04/18 19:41:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="b3f4a4">  <td>23/04/18 19:39:59</td>   <td>-89974</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&gt;&gt;bsConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="b3f4a4">  <td>23/04/18 19:40:01</td>   <td>-88608</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&gt;&gt;bcConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="b3f4a4">  <td>23/04/18 19:41:35</td>   <td>5502</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&lt;&lt;acConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
-<tr bgcolor="b3f4a4">  <td>23/04/18 19:41:39</td>   <td>9950</td> <td title="&lt;&lt;BaseClass.asConfig()[pri:0, instance:vtiger.OrganaizationTest.CreateOrganaizationTest@d9345cd]">&lt;&lt;asConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1902237905</td>   <td></td> </tr>
+<tr bgcolor="b3f4a4">  <td>23/04/18 19:48:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.CreateContactsWithOrganaizationTest.CreateContactWithOrganaization@428640fa]">&lt;&lt;amConfig</td> 
+<td>&nbsp;</td>  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="96ebbf">  <td>23/04/18 19:48:10</td>   <td>-36673</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactWithOrganaization.CreateContactWithOrganaization()[pri:0, instance:vtiger.CreateContactsWithOrganaizationTest.CreateContactWithOrganaization@428640fa]">CreateContactWithOrganaization</td> 
+  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="b3f4a4">  <td>23/04/18 19:47:54</td>   <td>-52760</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:vtiger.CreateContactsWithOrganaizationTest.CreateContactWithOrganaization@428640fa]">&gt;&gt;bsConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="b3f4a4">  <td>23/04/18 19:48:53</td>   <td>6024</td> <td title="&lt;&lt;BaseClass.asConfig()[pri:0, instance:vtiger.CreateContactsWithOrganaizationTest.CreateContactWithOrganaization@428640fa]">&lt;&lt;asConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="b3f4a4">  <td>23/04/18 19:48:49</td>   <td>2358</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.CreateContactsWithOrganaizationTest.CreateContactWithOrganaization@428640fa]">&lt;&lt;acConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="b3f4a4">  <td>23/04/18 19:47:55</td>   <td>-52089</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig()[pri:0, instance:vtiger.CreateContactsWithOrganaizationTest.CreateContactWithOrganaization@428640fa]">&gt;&gt;bcConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2130192211</td>   <td></td> </tr>
+<tr bgcolor="b3f4a4">  <td>23/04/18 19:48:06</td>   <td>-41031</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.CreateContactsWithOrganaizationTest.CreateContactWithOrganaization@428640fa]">&gt;&gt;bmConfig</td> 
+<td>&nbsp;</td>  <td>main@2130192211</td>   <td></td> </tr>
 </table>
