--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,5 +1,9 @@
-<h2>Reporter output</h2><table><tr><td>navigated organaization link</td></tr>
-<tr><td>navigated organaization look up image</td></tr>
-<tr><td>created  organaization </td></tr>
+<h2>Reporter output</h2><table><tr><td>navigated to organaization link</td></tr>
+<tr><td>navigated  organaization look up image</td></tr>
+<tr><td>created organaization </td></tr>
 <tr><td>validated organaization </td></tr>
+<tr><td>navigated to contacts  link</td></tr>
+<tr><td>navigated to contacts  look up image</td></tr>
+<tr><td>created  contacts  with orgname</td></tr>
+<tr><td>validated contacts  </td></tr>
 </table>
