--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">98,492</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">58,085</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">vtiger.OrganaizationTest.CreateOrganaizationTest</td><td><a href="#m0">CreateOrganaizationTest</a></td><td rowspan="1">1681827043617</td><td rowspan="1">39136</td></tr><tr class="passedeven"><td><a href="#m1">demo</a></td><td rowspan="1">1681827089763</td><td rowspan="1">6</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">vtiger.CreateContactsWithOrganaizationTest.CreateContactWithOrganaization</td><td><a href="#m0">CreateContactWithOrganaization</a></td><td rowspan="1">1681827490479</td><td rowspan="1">36664</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">vtiger.OrganaizationTest.CreateOrganaizationTest#CreateOrganaizationTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">navigated organaization link<br/>navigated organaization look up image<br/>created  organaization <br/>validated organaization </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">vtiger.OrganaizationTest.CreateOrganaizationTest#demo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">vtiger.CreateContactsWithOrganaizationTest.CreateContactWithOrganaization#CreateContactWithOrganaization</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">navigated to organaization link<br/>navigated  organaization look up image<br/>created organaization <br/>validated organaization <br/>navigated to contacts  link<br/>navigated to contacts  look up image<br/>created  contacts  with orgname<br/>validated contacts  </div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
