--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\PC\AppData\Local\Temp\testng-eclipse--577465472\testng-customsuite.xml</span>
+                    <span>C:\Users\PC\AppData\Local\Temp\testng-eclipse-1653397307\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Default_suite" class="navigator-link ">
-                    <span>1 group</span>
+                    <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,12 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="vtiger.OrganaizationTest.CreateOrganaizationTest" class="method navigator-link" hash-for-method="CreateOrganaizationTest">CreateOrganaizationTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="vtiger.OrganaizationTest.CreateOrganaizationTest" class="method navigator-link" hash-for-method="demo">demo</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="vtiger.CreateContactsWithOrganaizationTest.CreateContactWithOrganaization" class="method navigator-link" hash-for-method="CreateContactWithOrganaization">CreateContactWithOrganaization</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,21 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">vtiger.OrganaizationTest.CreateOrganaizationTest</span>
+              <span class="class-name">vtiger.CreateContactsWithOrganaizationTest.CreateContactWithOrganaization</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="CreateOrganaizationTest">
-                  </a> <!-- CreateOrganaizationTest -->
-                  <span class="method-name">CreateOrganaizationTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="demo">
-                  </a> <!-- demo -->
-                  <span class="method-name">demo</span>
+                  <a name="CreateContactWithOrganaization">
+                  </a> <!-- CreateContactWithOrganaization -->
+                  <span class="method-name">CreateContactWithOrganaization</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -149,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\PC\AppData\Local\Temp\testng-eclipse--577465472\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\PC\AppData\Local\Temp\testng-eclipse-1653397307\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -158,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;vtiger.OrganaizationTest.CreateOrganaizationTest&quot;/&gt;
+      &lt;class name=&quot;vtiger.CreateContactsWithOrganaizationTest.CreateContactWithOrganaization&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -182,14 +170,6 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="test-group">
-              <span class="test-group-name">RegressionSuite</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">CreateOrganaizationTest</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -206,20 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'CreateOrganaizationTest')
-data.setCell(0, 2, 'vtiger.OrganaizationTest.CreateOrganaizationTest')
-data.setCell(0, 3, 39136);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'demo')
-data.setCell(1, 2, 'vtiger.OrganaizationTest.CreateOrganaizationTest')
-data.setCell(1, 3, 6);
+data.setCell(0, 1, 'CreateContactWithOrganaization')
+data.setCell(0, 2, 'vtiger.CreateContactsWithOrganaizationTest.CreateContactWithOrganaization')
+data.setCell(0, 3, 36664);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 39 seconds</span>
+              <span class="suite-total-time">Total running time: 36 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -231,12 +207,16 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">CreateOrganaizationTest</span>
+              <span class="reporter-method-name">CreateContactWithOrganaization</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">navigated organaization link</span>
-                <span class="reporter-method-output">navigated organaization look up image</span>
-                <span class="reporter-method-output">created  organaization </span>
+                <span class="reporter-method-output">navigated to organaization link</span>
+                <span class="reporter-method-output">navigated  organaization look up image</span>
+                <span class="reporter-method-output">created organaization </span>
                 <span class="reporter-method-output">validated organaization </span>
+                <span class="reporter-method-output">navigated to contacts  link</span>
+                <span class="reporter-method-output">navigated to contacts  look up image</span>
+                <span class="reporter-method-output">created  contacts  with orgname</span>
+                <span class="reporter-method-output">validated contacts  </span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -254,46 +234,34 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">vtiger.OrganaizationTest.CreateOrganaizationTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">vtiger.CreateContactsWithOrganaizationTest.CreateContactWithOrganaization</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">bsConfig</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">bcConfig</span>
-                <span class="method-start">1379 ms</span>
+                <span class="method-start">678 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">bmConfig</span>
-                <span class="method-start">36885 ms</span>
+                <span class="method-start">11736 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">CreateOrganaizationTest</span>
-                <span class="method-start">43832 ms</span>
+                <span class="method-name">CreateContactWithOrganaization</span>
+                <span class="method-start">16095 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">amConfig</span>
-                <span class="method-start">82987 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">bmConfig</span>
-                <span class="method-start">86122 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">demo</span>
-                <span class="method-start">89978 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">amConfig</span>
-                <span class="method-start">89987 ms</span>
+                <span class="method-start">52767 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">acConfig</span>
-                <span class="method-start">95490 ms</span>
+                <span class="method-start">55126 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">asConfig</span>
-                <span class="method-start">99938 ms</span>
+                <span class="method-start">58789 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
